// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots FilterManager no filter 1`] = `
.c0 {
  padding: 16px;
}

<div
  className="c0 "
>
  <h3>
    Full List (
    50
     employees)
  </h3>
  <ul>
    <li>
      Edison Keebler
       (Dept: 
      <i>
        Clothing
      </i>
      )
    </li>
    <li>
      Henderson Satterfield
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Gregorio Heaney V
       (Dept: 
      <i>
        Movies
      </i>
      )
    </li>
    <li>
      Laurel Rippin
       (Dept: 
      <i>
        Games
      </i>
      )
    </li>
    <li>
      Ms. Merritt Lemke
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Leonor Hermiston
       (Dept: 
      <i>
        Garden
      </i>
      )
    </li>
    <li>
      Darrin Greenholt
       (Dept: 
      <i>
        Jewelery
      </i>
      )
    </li>
    <li>
      Hipolito Daniel
       (Dept: 
      <i>
        Movies
      </i>
      )
    </li>
    <li>
      Hershel Rohan
       (Dept: 
      <i>
        Beauty
      </i>
      )
    </li>
    <li>
      Keon Buckridge
       (Dept: 
      <i>
        Grocery
      </i>
      )
    </li>
    <li>
      Terence Friesen
       (Dept: 
      <i>
        Industrial
      </i>
      )
    </li>
    <li>
      Hugh Moore
       (Dept: 
      <i>
        Jewelery
      </i>
      )
    </li>
    <li>
      Karley Kemmer
       (Dept: 
      <i>
        Garden
      </i>
      )
    </li>
    <li>
      Mario Strosin
       (Dept: 
      <i>
        Baby
      </i>
      )
    </li>
    <li>
      Rodger Muller
       (Dept: 
      <i>
        Sports
      </i>
      )
    </li>
    <li>
      Emerald Ruecker PhD
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Austin Leannon
       (Dept: 
      <i>
        Clothing
      </i>
      )
    </li>
    <li>
      Jasen Medhurst
       (Dept: 
      <i>
        Games
      </i>
      )
    </li>
    <li>
      Norene Powlowski
       (Dept: 
      <i>
        Clothing
      </i>
      )
    </li>
    <li>
      Cyrus Howell
       (Dept: 
      <i>
        Sports
      </i>
      )
    </li>
    <li>
      Gladys Baumbach
       (Dept: 
      <i>
        Tools
      </i>
      )
    </li>
    <li>
      Kaylie Ziemann
       (Dept: 
      <i>
        Shoes
      </i>
      )
    </li>
    <li>
      Dr. Alphonso Pollich
       (Dept: 
      <i>
        Shoes
      </i>
      )
    </li>
    <li>
      Everett Swift
       (Dept: 
      <i>
        Toys
      </i>
      )
    </li>
    <li>
      Mrs. Brenda Torp
       (Dept: 
      <i>
        Sports
      </i>
      )
    </li>
    <li>
      Rebeca Steuber
       (Dept: 
      <i>
        Home
      </i>
      )
    </li>
    <li>
      Santa D'Amore
       (Dept: 
      <i>
        Garden
      </i>
      )
    </li>
    <li>
      Jovani Mayert
       (Dept: 
      <i>
        Books
      </i>
      )
    </li>
    <li>
      Madge Ullrich
       (Dept: 
      <i>
        Home
      </i>
      )
    </li>
    <li>
      Earnestine Turcotte
       (Dept: 
      <i>
        Computers
      </i>
      )
    </li>
    <li>
      Joseph Schoen
       (Dept: 
      <i>
        Shoes
      </i>
      )
    </li>
    <li>
      Catherine Miller
       (Dept: 
      <i>
        Sports
      </i>
      )
    </li>
    <li>
      Mrs. Hilbert Abshire
       (Dept: 
      <i>
        Electronics
      </i>
      )
    </li>
    <li>
      Dr. Eleonore Schumm
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Ms. Jared Robel
       (Dept: 
      <i>
        Computers
      </i>
      )
    </li>
    <li>
      Cassandre Schoen
       (Dept: 
      <i>
        Home
      </i>
      )
    </li>
    <li>
      Gunner Brown
       (Dept: 
      <i>
        Outdoors
      </i>
      )
    </li>
    <li>
      Guadalupe Kessler
       (Dept: 
      <i>
        Shoes
      </i>
      )
    </li>
    <li>
      Dino Bogan
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Timmy Bednar
       (Dept: 
      <i>
        Shoes
      </i>
      )
    </li>
    <li>
      Mark Stokes
       (Dept: 
      <i>
        Automotive
      </i>
      )
    </li>
    <li>
      Arlene Bode
       (Dept: 
      <i>
        Tools
      </i>
      )
    </li>
    <li>
      Ms. Santina MacGyver
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Jan Walker
       (Dept: 
      <i>
        Toys
      </i>
      )
    </li>
    <li>
      Kendrick McClure
       (Dept: 
      <i>
        Clothing
      </i>
      )
    </li>
    <li>
      Maryse Orn
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Ms. Nathan Hudson
       (Dept: 
      <i>
        Movies
      </i>
      )
    </li>
    <li>
      Dr. Madaline McGlynn
       (Dept: 
      <i>
        Automotive
      </i>
      )
    </li>
    <li>
      Miss Maximus Kulas
       (Dept: 
      <i>
        Electronics
      </i>
      )
    </li>
    <li>
      Herminia Heathcote
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
  </ul>
</div>
`;

exports[`Storyshots FilterManager with matchAny filter 1`] = `
.c0 {
  padding: 16px;
}

.c2 {
  font-size: 14px;
  margin-bottom: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  width: 16px;
  height: 16px;
  margin: 0 8px 0 0;
  padding: 0;
  border: 2px solid #B4BDC5;
  border-radius: 2px;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: text-bottom;
  cursor: pointer;
}

.c3 ~ span {
  cursor: pointer;
  color: #53616E;
}

.c3::after {
  font-family: Material-Design-Iconic-Font;
  font-size: 16px;
  font-weight: bold;
  color: #FFF;
  position: relative;
  top: -2.5px;
}

.c3:hover,
.c3:focus,
.c3:active {
  border-color: #8D9BA7;
}

.c3:checked {
  background-color: #2FCDD0;
  border-color: #2FCDD0;
}

.c3:checked ~ span {
  color: #1C2534;
}

.c3:checked::after {
  content: '\\f26b';
}

.c3:checked:hover,
.c3:checked:focus {
  background-color: #009BC0;
  border-color: #009BC0;
}

.c3:checked:active {
  background-color: #0081AA;
  border-color: #0081AA;
}

.c3:checked:disabled,
.c3:checked:disabled:hover {
  background-color: #DBDFE3;
  border-color: #DBDFE3;
}

.c3:checked.error {
  background-color: #C00316;
  border-color: #C00316;
}

.c3:disabled,
.c3:disabled:hover {
  border-color: #DBDFE3;
  cursor: not-allowed;
}

.c3:disabled ~ span,
.c3:disabled:hover ~ span {
  cursor: not-allowed;
  color: #8D9BA7;
}

.c3:required {
  box-shadow: none;
}

.c3.error {
  border-color: #C00316;
}

.c3.error:hover {
  border-color: #C00316;
}

.c1 {
  display: block;
  line-height: 1.5;
}

<div
  className="c0 "
>
  <h3>
    Checkboxes (matchAny)
  </h3>
  <div
    className=""
  >
    Filter departments:
     
    <label
      className="c1 c2 "
    >
      <input
        checked={false}
        className="c3"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Clothing
      </span>
    </label>
    <label
      className="c1 c2 "
    >
      <input
        checked={false}
        className="c3"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Health
      </span>
    </label>
    <label
      className="c1 c2 "
    >
      <input
        checked={false}
        className="c3"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Movies
      </span>
    </label>
    <label
      className="c1 c2 "
    >
      <input
        checked={false}
        className="c3"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Games
      </span>
    </label>
    <label
      className="c1 c2 "
    >
      <input
        checked={false}
        className="c3"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Garden
      </span>
    </label>
    <label
      className="c1 c2 "
    >
      <input
        checked={false}
        className="c3"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Jewelery
      </span>
    </label>
    <label
      className="c1 c2 "
    >
      <input
        checked={false}
        className="c3"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Beauty
      </span>
    </label>
    <label
      className="c1 c2 "
    >
      <input
        checked={false}
        className="c3"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Grocery
      </span>
    </label>
    <label
      className="c1 c2 "
    >
      <input
        checked={false}
        className="c3"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Industrial
      </span>
    </label>
    <label
      className="c1 c2 "
    >
      <input
        checked={false}
        className="c3"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Baby
      </span>
    </label>
    <label
      className="c1 c2 "
    >
      <input
        checked={false}
        className="c3"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Sports
      </span>
    </label>
    <label
      className="c1 c2 "
    >
      <input
        checked={false}
        className="c3"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Tools
      </span>
    </label>
    <label
      className="c1 c2 "
    >
      <input
        checked={false}
        className="c3"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Shoes
      </span>
    </label>
    <label
      className="c1 c2 "
    >
      <input
        checked={false}
        className="c3"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Toys
      </span>
    </label>
    <label
      className="c1 c2 "
    >
      <input
        checked={false}
        className="c3"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Home
      </span>
    </label>
    <label
      className="c1 c2 "
    >
      <input
        checked={false}
        className="c3"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Books
      </span>
    </label>
    <label
      className="c1 c2 "
    >
      <input
        checked={false}
        className="c3"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Computers
      </span>
    </label>
    <label
      className="c1 c2 "
    >
      <input
        checked={false}
        className="c3"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Electronics
      </span>
    </label>
    <label
      className="c1 c2 "
    >
      <input
        checked={false}
        className="c3"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Outdoors
      </span>
    </label>
    <label
      className="c1 c2 "
    >
      <input
        checked={true}
        className="c3"
        onChange={[Function]}
        type="checkbox"
      />
      <span>
        Automotive
      </span>
    </label>
  </div>
  <b>
    Results:
  </b>
  <ul>
    <li>
      Mark Stokes
       (Dept: 
      <i>
        Automotive
      </i>
      )
    </li>
    <li>
      Dr. Madaline McGlynn
       (Dept: 
      <i>
        Automotive
      </i>
      )
    </li>
  </ul>
</div>
`;

exports[`Storyshots FilterManager with stringContains filter 1`] = `
.c0 {
  padding: 16px;
}

.c1 {
  width: 33.33333333333333%;
}

.c6 {
  font-family: Material-Design-Iconic-Font;
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  font-size: 14px;
  text-rendering: auto;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
}

.c6::before {
  content: '\\f1c3';
}

.c4 {
  background-color: transparent;
  color: inherit;
  margin: 0px;
  padding: 4px;
  width: 100%;
  display: inline-block;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:focus {
  outline: none;
  box-shadow: inset 0 0 0 1px blue;
}

.c4:disabled {
  opacity: 0.25;
}

.c3 {
  font-size: 12px;
  border: 1px solid #D6DEE9;
  border-radius: 2px;
  background-color: #FFF;
  color: #1C2534;
  padding-left: 8px;
  padding-right: 8px;
  height: 32px;
  line-height: 1.43;
}

.c3::-webkit-input-placeholder {
  color: #8D9BA7;
}

.c3::-moz-placeholder {
  color: #8D9BA7;
}

.c3:-ms-input-placeholder {
  color: #8D9BA7;
}

.c3::placeholder {
  color: #8D9BA7;
}

.c3:hover,
.c3:active {
  border-color: #B4BDC5;
}

.c3:focus {
  border-color: #2FCDD0;
  box-shadow: 0 0 0 1px rgba(47,205,208,0.5);
  outline: none;
}

.c3:disabled {
  background-color: #f3f3f3;
  border-color: #f3f3f3;
}

.c3:required {
  box-shadow: none;
}

.c3.error {
  border-color: #C00316;
}

.c2 {
  position: relative;
}

.c2 input {
  padding-right: 32px;
}

.c5 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: #B4BDC5;
  right: 8px;
  pointer-events: none;
}

<div
  className="c0 "
>
  <h3>
    Search (stringContains)
  </h3>
  <div
    className="c1 "
  >
    Search names:
     
    <div
      className="c2 "
    >
      <input
        className="c3 c4 "
        onChange={[Function]}
        type="text"
        value="er"
      />
      <i
        className="c5 c6 "
        onClick={undefined}
      />
    </div>
  </div>
  <b>
    Results:
  </b>
  <ul>
    <li>
      Edison Keebler
       (Dept: 
      <i>
        Clothing
      </i>
      )
    </li>
    <li>
      Henderson Satterfield
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Ms. Merritt Lemke
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Leonor Hermiston
       (Dept: 
      <i>
        Garden
      </i>
      )
    </li>
    <li>
      Hershel Rohan
       (Dept: 
      <i>
        Beauty
      </i>
      )
    </li>
    <li>
      Terence Friesen
       (Dept: 
      <i>
        Industrial
      </i>
      )
    </li>
    <li>
      Karley Kemmer
       (Dept: 
      <i>
        Garden
      </i>
      )
    </li>
    <li>
      Rodger Muller
       (Dept: 
      <i>
        Sports
      </i>
      )
    </li>
    <li>
      Emerald Ruecker PhD
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Everett Swift
       (Dept: 
      <i>
        Toys
      </i>
      )
    </li>
    <li>
      Rebeca Steuber
       (Dept: 
      <i>
        Home
      </i>
      )
    </li>
    <li>
      Jovani Mayert
       (Dept: 
      <i>
        Books
      </i>
      )
    </li>
    <li>
      Catherine Miller
       (Dept: 
      <i>
        Sports
      </i>
      )
    </li>
    <li>
      Mrs. Hilbert Abshire
       (Dept: 
      <i>
        Electronics
      </i>
      )
    </li>
    <li>
      Gunner Brown
       (Dept: 
      <i>
        Outdoors
      </i>
      )
    </li>
    <li>
      Guadalupe Kessler
       (Dept: 
      <i>
        Shoes
      </i>
      )
    </li>
    <li>
      Ms. Santina MacGyver
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Jan Walker
       (Dept: 
      <i>
        Toys
      </i>
      )
    </li>
    <li>
      Herminia Heathcote
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
  </ul>
</div>
`;

exports[`Storyshots Kitchen Sink all 1`] = `
.c0 {
  padding: 16px;
}

.c3 {
  width: 33.33333333333333%;
}

.c17 {
  margin-left: 64px;
  margin-right: 64px;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c20 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c24 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c2 {
  width: 16.666666666666664%;
}

.c12 {
  padding: 16px;
  width: 66.66666666666666%;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  font-family: Material-Design-Iconic-Font;
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  font-size: 14px;
  text-rendering: auto;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
}

.c8::before {
  content: '\\f1c3';
}

.c23 {
  font-family: Material-Design-Iconic-Font;
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-rendering: auto;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
}

.c23::before {
  content: '\\f2fa';
}

.c26 {
  font-family: Material-Design-Iconic-Font;
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-rendering: auto;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
}

.c26::before {
  content: '\\f2fb';
}

.c18 {
  margin: 0px;
  margin-top: auto;
  margin-bottom: auto;
  font-family: Circular,sans-serif;
  font-size: 14px;
  line-height: 1.43;
  font-weight: 400;
}

.c6 {
  background-color: transparent;
  color: inherit;
  margin: 0px;
  padding: 4px;
  width: 100%;
  display: inline-block;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c6:focus {
  outline: none;
  box-shadow: inset 0 0 0 1px blue;
}

.c6:disabled {
  opacity: 0.25;
}

.c10 {
  font-size: 14px;
  margin-bottom: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 {
  background-color: #FF5745;
  color: #FFF;
  margin: 8px;
}

.c22 {
  background-color: #D6DEE9;
  color: #53616E;
  margin-right: 4px;
}

.c25 {
  background-color: #D6DEE9;
  color: #53616E;
}

.c15 {
  visibility: visible;
}

.c13 {
  display: inline-block;
  box-sizing: border-box;
  position: relative;
  cursor: pointer;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-decoration: none;
  border-radius: 2px;
  outline: 0;
  line-height: 1.43;
  text-align: center;
  height: 40px;
  min-width: 40px;
  font-size: 14px;
  padding: 10px 16px;
}

.c13:disabled {
  cursor: not-allowed;
  opacity: 0.65;
}

.c13:focus:not(:disabled),
.c13:hover:not(:disabled) {
  color: #FFF;
  background-color: #F25341;
}

.c13:active:not(:disabled) {
  color: #FFF;
  background-color: #E64F3E;
}

.c13:focus:not(:disabled) {
  box-shadow: 0 0 0 2px rgba(18,52,102,0.1);
}

.c21 {
  display: inline-block;
  box-sizing: border-box;
  position: relative;
  cursor: pointer;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-decoration: none;
  border-radius: 2px;
  outline: 0;
  line-height: 1.43;
  text-align: center;
  height: 40px;
  min-width: 40px;
  font-size: 14px;
  padding: 10px 16px;
}

.c21:disabled {
  cursor: not-allowed;
  opacity: 0.65;
}

.c21:focus:not(:disabled),
.c21:hover:not(:disabled) {
  color: #53616E;
  background-color: #C8D0DB;
}

.c21:active:not(:disabled) {
  color: #53616E;
  background-color: #BCC4CF;
}

.c21:focus:not(:disabled) {
  box-shadow: 0 0 0 2px rgba(18,52,102,0.1);
}

.c11 {
  width: 16px;
  height: 16px;
  margin: 0 8px 0 0;
  padding: 0;
  border: 2px solid #B4BDC5;
  border-radius: 2px;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: text-bottom;
  cursor: pointer;
}

.c11 ~ span {
  cursor: pointer;
  color: #53616E;
}

.c11::after {
  font-family: Material-Design-Iconic-Font;
  font-size: 16px;
  font-weight: bold;
  color: #FFF;
  position: relative;
  top: -2.5px;
}

.c11:hover,
.c11:focus,
.c11:active {
  border-color: #8D9BA7;
}

.c11:checked {
  background-color: #2FCDD0;
  border-color: #2FCDD0;
}

.c11:checked ~ span {
  color: #1C2534;
}

.c11:checked::after {
  content: '\\f26b';
}

.c11:checked:hover,
.c11:checked:focus {
  background-color: #009BC0;
  border-color: #009BC0;
}

.c11:checked:active {
  background-color: #0081AA;
  border-color: #0081AA;
}

.c11:checked:disabled,
.c11:checked:disabled:hover {
  background-color: #DBDFE3;
  border-color: #DBDFE3;
}

.c11:checked.error {
  background-color: #C00316;
  border-color: #C00316;
}

.c11:disabled,
.c11:disabled:hover {
  border-color: #DBDFE3;
  cursor: not-allowed;
}

.c11:disabled ~ span,
.c11:disabled:hover ~ span {
  cursor: not-allowed;
  color: #8D9BA7;
}

.c11:required {
  box-shadow: none;
}

.c11.error {
  border-color: #C00316;
}

.c11.error:hover {
  border-color: #C00316;
}

.c9 {
  display: block;
  line-height: 1.5;
}

.c5 {
  font-size: 12px;
  border: 1px solid #D6DEE9;
  border-radius: 2px;
  background-color: #FFF;
  color: #1C2534;
  padding-left: 8px;
  padding-right: 8px;
  height: 32px;
  line-height: 1.43;
}

.c5::-webkit-input-placeholder {
  color: #8D9BA7;
}

.c5::-moz-placeholder {
  color: #8D9BA7;
}

.c5:-ms-input-placeholder {
  color: #8D9BA7;
}

.c5::placeholder {
  color: #8D9BA7;
}

.c5:hover,
.c5:active {
  border-color: #B4BDC5;
}

.c5:focus {
  border-color: #2FCDD0;
  box-shadow: 0 0 0 1px rgba(47,205,208,0.5);
  outline: none;
}

.c5:disabled {
  background-color: #f3f3f3;
  border-color: #f3f3f3;
}

.c5:required {
  box-shadow: none;
}

.c5.error {
  border-color: #C00316;
}

.c4 {
  position: relative;
}

.c4 input {
  padding-right: 32px;
}

.c7 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: #B4BDC5;
  right: 8px;
  pointer-events: none;
}

.c19 {
  color: #8D9BA7;
}

@media screen and (min-width:32em) {
  .c17 {
    margin-left: 0px;
  }
}

@media screen and (min-width:32em) {
  .c17 {
    margin-right: 8px;
  }
}

@media screen and (min-width:32em) {
  .c17 {
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
  }
}

@media screen and (min-width:32em) {
  .c20 {
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

<div
  className="c0 "
>
  <h3>
    Filtering, Sorting, and Pagination
  </h3>
  <div
    className="c1 "
  >
    <div
      className="c2 "
    >
      <div
        className="c3 "
      >
        Search names:
         
        <div
          className="c4 "
        >
          <input
            className="c5 c6 "
            onChange={[Function]}
            type="text"
            value=""
          />
          <i
            className="c7 c8 "
            onClick={undefined}
          />
        </div>
      </div>
      <div
        className=""
      >
        Filter departments:
         
        <label
          className="c9 c10 "
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Clothing
          </span>
        </label>
        <label
          className="c9 c10 "
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Health
          </span>
        </label>
        <label
          className="c9 c10 "
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Movies
          </span>
        </label>
        <label
          className="c9 c10 "
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Games
          </span>
        </label>
        <label
          className="c9 c10 "
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Garden
          </span>
        </label>
        <label
          className="c9 c10 "
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Jewelery
          </span>
        </label>
        <label
          className="c9 c10 "
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Beauty
          </span>
        </label>
        <label
          className="c9 c10 "
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Grocery
          </span>
        </label>
        <label
          className="c9 c10 "
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Industrial
          </span>
        </label>
        <label
          className="c9 c10 "
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Baby
          </span>
        </label>
        <label
          className="c9 c10 "
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Sports
          </span>
        </label>
        <label
          className="c9 c10 "
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Tools
          </span>
        </label>
        <label
          className="c9 c10 "
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Shoes
          </span>
        </label>
        <label
          className="c9 c10 "
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Toys
          </span>
        </label>
        <label
          className="c9 c10 "
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Home
          </span>
        </label>
        <label
          className="c9 c10 "
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Books
          </span>
        </label>
        <label
          className="c9 c10 "
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Computers
          </span>
        </label>
        <label
          className="c9 c10 "
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Electronics
          </span>
        </label>
        <label
          className="c9 c10 "
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Outdoors
          </span>
        </label>
        <label
          className="c9 c10 "
        >
          <input
            checked={false}
            className="c11"
            onChange={[Function]}
            type="checkbox"
          />
          <span>
            Automotive
          </span>
        </label>
      </div>
    </div>
    <div
      className="c12 "
    >
      <button
        className="c13 c14 "
        disabled={false}
        mode="primary"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c15 "
        >
          Sort by 
          name
        </div>
      </button>
      <button
        className="c13 c14 "
        disabled={false}
        mode="primary"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c15 "
        >
          Sort by 
          department
        </div>
      </button>
      <ul>
        <li>
          Edison Keebler
           (Dept: 
          <i>
            Clothing
          </i>
          )
        </li>
        <li>
          Henderson Satterfield
           (Dept: 
          <i>
            Health
          </i>
          )
        </li>
        <li>
          Gregorio Heaney V
           (Dept: 
          <i>
            Movies
          </i>
          )
        </li>
        <li>
          Laurel Rippin
           (Dept: 
          <i>
            Games
          </i>
          )
        </li>
        <li>
          Ms. Merritt Lemke
           (Dept: 
          <i>
            Health
          </i>
          )
        </li>
        <li>
          Leonor Hermiston
           (Dept: 
          <i>
            Garden
          </i>
          )
        </li>
        <li>
          Darrin Greenholt
           (Dept: 
          <i>
            Jewelery
          </i>
          )
        </li>
        <li>
          Hipolito Daniel
           (Dept: 
          <i>
            Movies
          </i>
          )
        </li>
        <li>
          Hershel Rohan
           (Dept: 
          <i>
            Beauty
          </i>
          )
        </li>
        <li>
          Keon Buckridge
           (Dept: 
          <i>
            Grocery
          </i>
          )
        </li>
        <li>
          Terence Friesen
           (Dept: 
          <i>
            Industrial
          </i>
          )
        </li>
        <li>
          Hugh Moore
           (Dept: 
          <i>
            Jewelery
          </i>
          )
        </li>
        <li>
          Karley Kemmer
           (Dept: 
          <i>
            Garden
          </i>
          )
        </li>
        <li>
          Mario Strosin
           (Dept: 
          <i>
            Baby
          </i>
          )
        </li>
        <li>
          Rodger Muller
           (Dept: 
          <i>
            Sports
          </i>
          )
        </li>
        <li>
          Emerald Ruecker PhD
           (Dept: 
          <i>
            Health
          </i>
          )
        </li>
        <li>
          Austin Leannon
           (Dept: 
          <i>
            Clothing
          </i>
          )
        </li>
        <li>
          Jasen Medhurst
           (Dept: 
          <i>
            Games
          </i>
          )
        </li>
        <li>
          Norene Powlowski
           (Dept: 
          <i>
            Clothing
          </i>
          )
        </li>
        <li>
          Cyrus Howell
           (Dept: 
          <i>
            Sports
          </i>
          )
        </li>
      </ul>
      <div
        className="c16 "
      >
        <div
          className="c17 "
        >
          <p
            className="c18"
          >
            1
            -
            20
             
            <span
              className="c19"
            >
              (of 
              50
              )
            </span>
          </p>
        </div>
        <div
          className="c20 "
        >
          <button
            className="c21 c22 "
            disabled={true}
            mode="normal"
            onClick={[Function]}
            type="button"
          >
            <div
              className="c15 "
            >
              <i
                className="c23 "
              />
            </div>
          </button>
        </div>
        <div
          className="c24 "
        >
          <button
            className="c21 c25 "
            disabled={false}
            mode="normal"
            onClick={[Function]}
            type="button"
          >
            <div
              className="c15 "
            >
              <i
                className="c26 "
              />
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots PageManager basic 1`] = `
.c0 {
  padding: 16px;
}

.c2 {
  margin-left: 64px;
  margin-right: 64px;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c5 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c10 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  font-family: Material-Design-Iconic-Font;
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-rendering: auto;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
}

.c9::before {
  content: '\\f2fa';
}

.c12 {
  font-family: Material-Design-Iconic-Font;
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-rendering: auto;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
}

.c12::before {
  content: '\\f2fb';
}

.c3 {
  margin: 0px;
  margin-top: auto;
  margin-bottom: auto;
  font-family: Circular,sans-serif;
  font-size: 14px;
  line-height: 1.43;
  font-weight: 400;
}

.c7 {
  background-color: #D6DEE9;
  color: #53616E;
  margin-right: 4px;
}

.c11 {
  background-color: #D6DEE9;
  color: #53616E;
}

.c8 {
  visibility: visible;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  position: relative;
  cursor: pointer;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-decoration: none;
  border-radius: 2px;
  outline: 0;
  line-height: 1.43;
  text-align: center;
  height: 40px;
  min-width: 40px;
  font-size: 14px;
  padding: 10px 16px;
}

.c6:disabled {
  cursor: not-allowed;
  opacity: 0.65;
}

.c6:focus:not(:disabled),
.c6:hover:not(:disabled) {
  color: #53616E;
  background-color: #C8D0DB;
}

.c6:active:not(:disabled) {
  color: #53616E;
  background-color: #BCC4CF;
}

.c6:focus:not(:disabled) {
  box-shadow: 0 0 0 2px rgba(18,52,102,0.1);
}

.c4 {
  color: #8D9BA7;
}

@media screen and (min-width:32em) {
  .c2 {
    margin-left: 0px;
  }
}

@media screen and (min-width:32em) {
  .c2 {
    margin-right: 8px;
  }
}

@media screen and (min-width:32em) {
  .c2 {
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
  }
}

@media screen and (min-width:32em) {
  .c5 {
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

<div
  className="c0 "
>
  <h3>
    Paged List (page size: 
    20
    )
  </h3>
  <ul>
    <li>
      Edison Keebler
       (Dept: 
      <i>
        Clothing
      </i>
      )
    </li>
    <li>
      Henderson Satterfield
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Gregorio Heaney V
       (Dept: 
      <i>
        Movies
      </i>
      )
    </li>
    <li>
      Laurel Rippin
       (Dept: 
      <i>
        Games
      </i>
      )
    </li>
    <li>
      Ms. Merritt Lemke
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Leonor Hermiston
       (Dept: 
      <i>
        Garden
      </i>
      )
    </li>
    <li>
      Darrin Greenholt
       (Dept: 
      <i>
        Jewelery
      </i>
      )
    </li>
    <li>
      Hipolito Daniel
       (Dept: 
      <i>
        Movies
      </i>
      )
    </li>
    <li>
      Hershel Rohan
       (Dept: 
      <i>
        Beauty
      </i>
      )
    </li>
    <li>
      Keon Buckridge
       (Dept: 
      <i>
        Grocery
      </i>
      )
    </li>
    <li>
      Terence Friesen
       (Dept: 
      <i>
        Industrial
      </i>
      )
    </li>
    <li>
      Hugh Moore
       (Dept: 
      <i>
        Jewelery
      </i>
      )
    </li>
    <li>
      Karley Kemmer
       (Dept: 
      <i>
        Garden
      </i>
      )
    </li>
    <li>
      Mario Strosin
       (Dept: 
      <i>
        Baby
      </i>
      )
    </li>
    <li>
      Rodger Muller
       (Dept: 
      <i>
        Sports
      </i>
      )
    </li>
    <li>
      Emerald Ruecker PhD
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Austin Leannon
       (Dept: 
      <i>
        Clothing
      </i>
      )
    </li>
    <li>
      Jasen Medhurst
       (Dept: 
      <i>
        Games
      </i>
      )
    </li>
    <li>
      Norene Powlowski
       (Dept: 
      <i>
        Clothing
      </i>
      )
    </li>
    <li>
      Cyrus Howell
       (Dept: 
      <i>
        Sports
      </i>
      )
    </li>
  </ul>
  <div
    className="c1 "
  >
    <div
      className="c2 "
    >
      <p
        className="c3"
      >
        1
        -
        20
         
        <span
          className="c4"
        >
          (of 
          50
          )
        </span>
      </p>
    </div>
    <div
      className="c5 "
    >
      <button
        className="c6 c7 "
        disabled={true}
        mode="normal"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8 "
        >
          <i
            className="c9 "
          />
        </div>
      </button>
    </div>
    <div
      className="c10 "
    >
      <button
        className="c6 c11 "
        disabled={false}
        mode="normal"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c8 "
        >
          <i
            className="c12 "
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots SortManager basic 1`] = `
.c0 {
  padding: 16px;
}

.c2 {
  background-color: #FF5745;
  color: #FFF;
  margin: 8px;
}

.c3 {
  visibility: visible;
}

.c1 {
  display: inline-block;
  box-sizing: border-box;
  position: relative;
  cursor: pointer;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-decoration: none;
  border-radius: 2px;
  outline: 0;
  line-height: 1.43;
  text-align: center;
  height: 40px;
  min-width: 40px;
  font-size: 14px;
  padding: 10px 16px;
}

.c1:disabled {
  cursor: not-allowed;
  opacity: 0.65;
}

.c1:focus:not(:disabled),
.c1:hover:not(:disabled) {
  color: #FFF;
  background-color: #F25341;
}

.c1:active:not(:disabled) {
  color: #FFF;
  background-color: #E64F3E;
}

.c1:focus:not(:disabled) {
  box-shadow: 0 0 0 2px rgba(18,52,102,0.1);
}

<div
  className="c0 "
>
  <h3>
    Sorting a List by specific keys
  </h3>
  <button
    className="c1 c2 "
    disabled={false}
    mode="primary"
    onClick={[Function]}
    type="button"
  >
    <div
      className="c3 "
    >
      Sort by 
      name
    </div>
  </button>
  <button
    className="c1 c2 "
    disabled={false}
    mode="primary"
    onClick={[Function]}
    type="button"
  >
    <div
      className="c3 "
    >
      Sort by 
      department
    </div>
  </button>
  <ul>
    <li>
      Edison Keebler
       (Dept: 
      <i>
        Clothing
      </i>
      )
    </li>
    <li>
      Henderson Satterfield
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Gregorio Heaney V
       (Dept: 
      <i>
        Movies
      </i>
      )
    </li>
    <li>
      Laurel Rippin
       (Dept: 
      <i>
        Games
      </i>
      )
    </li>
    <li>
      Ms. Merritt Lemke
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Leonor Hermiston
       (Dept: 
      <i>
        Garden
      </i>
      )
    </li>
    <li>
      Darrin Greenholt
       (Dept: 
      <i>
        Jewelery
      </i>
      )
    </li>
    <li>
      Hipolito Daniel
       (Dept: 
      <i>
        Movies
      </i>
      )
    </li>
    <li>
      Hershel Rohan
       (Dept: 
      <i>
        Beauty
      </i>
      )
    </li>
    <li>
      Keon Buckridge
       (Dept: 
      <i>
        Grocery
      </i>
      )
    </li>
    <li>
      Terence Friesen
       (Dept: 
      <i>
        Industrial
      </i>
      )
    </li>
    <li>
      Hugh Moore
       (Dept: 
      <i>
        Jewelery
      </i>
      )
    </li>
    <li>
      Karley Kemmer
       (Dept: 
      <i>
        Garden
      </i>
      )
    </li>
    <li>
      Mario Strosin
       (Dept: 
      <i>
        Baby
      </i>
      )
    </li>
    <li>
      Rodger Muller
       (Dept: 
      <i>
        Sports
      </i>
      )
    </li>
    <li>
      Emerald Ruecker PhD
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Austin Leannon
       (Dept: 
      <i>
        Clothing
      </i>
      )
    </li>
    <li>
      Jasen Medhurst
       (Dept: 
      <i>
        Games
      </i>
      )
    </li>
    <li>
      Norene Powlowski
       (Dept: 
      <i>
        Clothing
      </i>
      )
    </li>
    <li>
      Cyrus Howell
       (Dept: 
      <i>
        Sports
      </i>
      )
    </li>
    <li>
      Gladys Baumbach
       (Dept: 
      <i>
        Tools
      </i>
      )
    </li>
    <li>
      Kaylie Ziemann
       (Dept: 
      <i>
        Shoes
      </i>
      )
    </li>
    <li>
      Dr. Alphonso Pollich
       (Dept: 
      <i>
        Shoes
      </i>
      )
    </li>
    <li>
      Everett Swift
       (Dept: 
      <i>
        Toys
      </i>
      )
    </li>
    <li>
      Mrs. Brenda Torp
       (Dept: 
      <i>
        Sports
      </i>
      )
    </li>
    <li>
      Rebeca Steuber
       (Dept: 
      <i>
        Home
      </i>
      )
    </li>
    <li>
      Santa D'Amore
       (Dept: 
      <i>
        Garden
      </i>
      )
    </li>
    <li>
      Jovani Mayert
       (Dept: 
      <i>
        Books
      </i>
      )
    </li>
    <li>
      Madge Ullrich
       (Dept: 
      <i>
        Home
      </i>
      )
    </li>
    <li>
      Earnestine Turcotte
       (Dept: 
      <i>
        Computers
      </i>
      )
    </li>
    <li>
      Joseph Schoen
       (Dept: 
      <i>
        Shoes
      </i>
      )
    </li>
    <li>
      Catherine Miller
       (Dept: 
      <i>
        Sports
      </i>
      )
    </li>
    <li>
      Mrs. Hilbert Abshire
       (Dept: 
      <i>
        Electronics
      </i>
      )
    </li>
    <li>
      Dr. Eleonore Schumm
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Ms. Jared Robel
       (Dept: 
      <i>
        Computers
      </i>
      )
    </li>
    <li>
      Cassandre Schoen
       (Dept: 
      <i>
        Home
      </i>
      )
    </li>
    <li>
      Gunner Brown
       (Dept: 
      <i>
        Outdoors
      </i>
      )
    </li>
    <li>
      Guadalupe Kessler
       (Dept: 
      <i>
        Shoes
      </i>
      )
    </li>
    <li>
      Dino Bogan
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Timmy Bednar
       (Dept: 
      <i>
        Shoes
      </i>
      )
    </li>
    <li>
      Mark Stokes
       (Dept: 
      <i>
        Automotive
      </i>
      )
    </li>
    <li>
      Arlene Bode
       (Dept: 
      <i>
        Tools
      </i>
      )
    </li>
    <li>
      Ms. Santina MacGyver
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Jan Walker
       (Dept: 
      <i>
        Toys
      </i>
      )
    </li>
    <li>
      Kendrick McClure
       (Dept: 
      <i>
        Clothing
      </i>
      )
    </li>
    <li>
      Maryse Orn
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
    <li>
      Ms. Nathan Hudson
       (Dept: 
      <i>
        Movies
      </i>
      )
    </li>
    <li>
      Dr. Madaline McGlynn
       (Dept: 
      <i>
        Automotive
      </i>
      )
    </li>
    <li>
      Miss Maximus Kulas
       (Dept: 
      <i>
        Electronics
      </i>
      )
    </li>
    <li>
      Herminia Heathcote
       (Dept: 
      <i>
        Health
      </i>
      )
    </li>
  </ul>
</div>
`;
